# Holy-War-Python-Test

./: .gitignore  .tmp_ani_cards.txt  Carte con effetti da fixxare e creare.txt  README.md  animismo_norrena_effects_dump.txt  debug_turno.txt  my_premades.json  pyproject.toml  pyright.json
holy_war_terminal.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
holywar/: app_paths.py  cli.py  gui.py  scripting_api.py
holywar/ai/: simple_ai.py
holywar/core/: card_play.py  combat.py  destruction.py  engine.py  query_helpers.py  results.py  state.py  turn_flow.py  zones.py
holywar/data/: cards.json  deck_builder.py  importer.py  models.py  premade_decks.json  premade_decks.py  (+1 more)
installer/: HolyWar.iss
reports/: card_script_files.csv  effects_coverage_report.csv  effects_coverage_report.md  engine_catalog_coverage.md  manual_cards_effects.txt
scripts/: build_installer.ps1  hun_check.py  hun_debug.py  hun_debug2.py
tests/: test_animismo_norrena_script_coverage.py  test_card_script_files.py  test_catalog_contract.py  test_deck_builder.py  test_deck_effects_cataclisma_asgard.py  test_engine_core.py  test_phase_flags_and_conditions.py  test_premade_decks.py  test_premade_json_io.py  test_recent_card_fixes.py  test_runtime_migration.py  test_save_load.py  test_scripting_api.py  test_wave1_scripted_cards.py  test_wave2_scripted_cards.py  test_wave3_batch_contract.py  test_wave4_batch_contract.py  test_wave5_batch_contract.py  test_wave6_batch_contract.py  test_wave7_batch_contract.py  test_wave8_batch_contract.py  test_wave9_batch_contract.py
(+379 files in other folders)
