[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "holy-war-terminal"
version = "0.1.0"
description = "MVP terminale di Holy War"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openpyxl>=3.1.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
holywar = "holywar.cli:main"
holywar-gui = "holywar.gui:main"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"